--- a/snacks.html
+++ b/snacks.html
@@ -30,7 +30,7 @@
 
     .snacks-images {
         display: flex;
-        flex-direction: column; /* stack image and text vertically */
+        flex-direction: column; 
         align-items: center;
         gap: 10px;
         border-radius: 10px;
@@ -45,7 +45,7 @@
     }
 
     .snacks-images img {
-        width: 100%;   /* responsive image */
+        width: 100%;   
         height: auto;
         border-radius: 10px;
     }
@@ -68,13 +68,13 @@
         color: green;
         font-weight: bold;
         margin-top: 5px;
-        min-height: 20px; /* keeps layout stable */
+        min-height: 20px; 
     }
 
-    /* Mobile layout */
+  
     @media screen and (max-width: 768px) {
         .snacks {
-            grid-template-columns: 1fr; /* single column on mobile */
+            grid-template-columns: 1fr; 
         }
     }
 </style>
@@ -139,3 +139,4 @@ function addToCart(btn){
 
 </body>
 </html>
+
