--- a/southindian.html
+++ b/southindian.html
@@ -22,7 +22,7 @@
 
     .southfood {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* responsive columns */
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
         gap: 30px;
         width: 90%;
         margin: auto;
@@ -30,7 +30,7 @@
 
     .southfood-images {
         display: flex;
-        flex-direction: column; /* stack image and text */
+        flex-direction: column; 
         align-items: center;
         gap: 10px;
         border-radius: 10px;
@@ -45,7 +45,7 @@
     }
 
     .southfood-images img {
-        width: 100%;   /* responsive image */
+        width: 100%;   
         height: auto;
         border-radius: 10px;
     }
@@ -68,12 +68,12 @@
         color: green;
         font-weight: bold;
         margin-top: 5px;
-        min-height: 20px; /* keep layout stable */
+        min-height: 20px; 
     }
 
     @media screen and (max-width: 768px) {
         .southfood {
-            grid-template-columns: 1fr; /* single column on mobile */
+            grid-template-columns: 1fr; 
         }
     }
 </style>
@@ -130,3 +130,4 @@ function addToCart(btn){
 
 </body>
 </html>
+
