--- a/sweets.html
+++ b/sweets.html
@@ -22,7 +22,7 @@
 
     .sweets {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* responsive */
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
         gap: 30px;
         width: 90%;
         margin: auto;
@@ -30,7 +30,7 @@
 
     .sweets-images {
         display: flex;
-        flex-direction: column; /* stack image and text */
+        flex-direction: column; 
         align-items: center;
         gap: 10px;
         border-radius: 10px;
@@ -45,7 +45,7 @@
     }
 
     .sweets-images img {
-        width: 100%;   /* responsive */
+        width: 100%;  
         height: auto;
         border-radius: 10px;
     }
@@ -73,7 +73,7 @@
 
     @media screen and (max-width: 768px) {
         .sweets {
-            grid-template-columns: 1fr; /* single column on mobile */
+            grid-template-columns: 1fr; 
         }
     }
 </style>
@@ -130,3 +130,4 @@ function addToCart(btn){
 
 </body>
 </html>
+
